--- a/style.css
+++ b/style.css
@@ -562,6 +562,7 @@ header a img {
     position: fixed;
     border: 1px #F3F4F6FF solid;
     background-color: #ffff;
+    margin-left: 15px;
 }
 
 .w3-bar-block .w3-bar-item:hover {
@@ -586,7 +587,6 @@ header a img {
     height: 50px;
 }
 .sidebar-menu ul{
-    padding-left: 24px;
     margin-top: 0!important;
 }
 .sidebar-menu .liste{
@@ -594,6 +594,7 @@ header a img {
     display: flex;
     align-items: center;
     margin-bottom: 5px;
+    width: 100%;
 }
 .liste:hover{
     border-radius: 3px;
@@ -655,12 +656,15 @@ header a img {
 .sidebar-menu .liste_active_dashboard a{
     color: white;
 }
+.liste:hover {
+    color: white;
+}
 .liste a{
     font-family: 'Inter';
     color: #565E6CFF;
     text-decoration: none;
 }
-.liste a:hover{
+.liste a:hover {
     color: white;
 }
 li img{
@@ -671,25 +675,28 @@ li img{
 }
 
 /*****sidebar-images****/
+.side_menu {
+    padding: 0 20px;
+}
 .sidebar-images img{
     width: 50px;
 }
 .sidebar-images{
-    margin-top: 188px;
-    width: 230px;
+    margin-top: 270px;
+    width: 90%;
     height: 86px;
     border-radius: 8px;
     display: flex;
     align-items: center;
-    padding: 10px;
+    /*padding: 10px;*/
 }
 .sidebar-images .text{
-    margin-left: 10px;
+    margin-left: 5px;
 }
 .sidebar-images .text h4{
     font-family: 'Epilogue';
     font-size: 15px;
-    line-height: 20px;
+    line-height: 5px;
     color: #171A1FFF;
 }
 /****************corps****************/
@@ -964,13 +971,13 @@ button{
     font-size: 15px;
     line-height: 26px;
     color: #171A1FFF;
-    margin: 0px;
+    margin: 0;
 }
 .image-texte .text p {
     font-family: 'Inter';
     font-size: 12px;
     color: #565E6CFF;
-    margin: 0px;
+    margin: 0;
 }
 .d-block-1{
     width: 30%;
@@ -997,6 +1004,7 @@ button{
     display: flex;
     flex-direction: row;
     padding: 20px;
+    margin-left: 15px;
 }
 .d-flex-A .d-block-1{
     background: #FFFFFFFF;
@@ -1018,15 +1026,29 @@ button{
     font-size: 18px;
     line-height: 28px;
     color: #171A1FFF;
-    margin: 0px;
+    margin: 0;
 }
 .d-flex-A .column img{
     width: 14px;
     height: 18px;
     cursor: pointer;
 }
-
 /*************table*****************/
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.d-flex-B{
+    gap: 20px;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-bottom: 30px;
+    margin-top: -10px;
+    margin-left: 15px;
+}
 
 .d-flex-B .table-stat h2{
     margin: 0px;
@@ -1118,7 +1140,7 @@ td, th {
     width: 250px;
 }
 .text-stats h3{
-   margin: 0px;
+    margin: 0;
     font-family: 'Epilogue';
     font-size: 18px;
     line-height: 28px;
@@ -1131,25 +1153,6 @@ td, th {
     line-height: 22px;
     color: #9095A0FF;
 }
-
-/***********************************************/
-
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.d-flex-B{
-    gap: 20px;
-    display: flex;
-    justify-content: space-between;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-bottom: 30px;
-    margin-top: -10px;
-}
-
-
 /**********************************************responsive de dashboard*************************************************/
 @media screen  and (max-width: 1920px){
     body {
@@ -1160,16 +1163,25 @@ td, th {
     }
     .corps .container {
         padding: 35px 15px;
+        margin-left: 15px;
+    }
+    .sidebar-head {
+        padding: 12px;
     }
     .sidebar-head .text a {
+        line-height: 32px!important;
         font-size: 20px!important;
     }
     .w3-sidebar .text p {
-        font-size: 16px;
+        font-size: 13px;
+        line-height: 24px!important;
     }
     .sidebar-head img {
         width: 65px;
         height: 65px;
+    }
+    .sidebar-menu ul {
+        padding-left: 0!important;
     }
     .sidebar-menu .liste {
         margin-bottom: 15px;
@@ -1179,14 +1191,14 @@ td, th {
         font-size: 20px;
     }
     .sidebar-images img {
-        width: 60px;
+        width: 45px;
     }
     .sidebar-images .text h4 {
-        font-size: 18px;
+        font-size: 14px;
     }
     .sidebar-images {
-        margin-top: 470px;
-        width: 100%;
+       position: absolute;
+        bottom: 0;
     }
     .corps .container h1 {
         font-size: 30px;
@@ -1265,18 +1277,18 @@ td, th {
         height: 45px;
     }
     .w3-sidebar .text p {
-        line-height: 20px;
         margin: 0;
         font-size: 11px;
+        line-height: 18px!important;
     }
     .sidebar-head .text a {
-        font-size: 14px!important;
+        font-size: 16px!important;
+        line-height: 20px!important;
     }
 
     .sidebar-menu .liste a {
         font-size: 13px!important;
     }
-
     .sidebar-images .text h4 {
         font-size: 14px;
         margin: 0;
@@ -1289,12 +1301,8 @@ td, th {
     }
 
     .sidebar-images {
-        margin-top: 50px;
-        width: 100%;
-    }
-    .sidebar-images {
         margin-top: 192px;
-        width: 100%;
+        width: 90%;
     }
     .sidebar-menu .liste {
         margin-bottom: 5px;
@@ -1310,13 +1318,15 @@ td, th {
     .sidebar-images {
         display: none;
     }
+    .sidebar-head .text a{
+        font-size: 14px!important;
+    }
 }
 @media screen  and (max-width: 992px){
     .w3-sidebar{
         display: none;
     }
 }
-
 /**********************************************responsive de dashboard*************************************************/
 @media screen  and (max-width: 1367px){
     .corps .container {
@@ -1468,7 +1478,6 @@ td, th {
         display: flex;
         flex-direction: column;
     }
-
 }
 @media screen  and (max-width: 992px){
     .corps{
@@ -1488,8 +1497,17 @@ td, th {
         border-top: 1px #DEE1E6FF solid;
     }
     .statistics img {
-        width: 40%;
-        height: auto;
+        width: 300px!important;
+        height: 175px!important;
+    }
+    .corps .container {
+        margin-left: 0!important;
+    }
+    .d-flex-A {
+        margin-left: 0!important;
+    }
+    .d-flex-B {
+        margin-left: 0!important;
     }
 }
 @media screen  and (max-width: 830px){
@@ -1551,10 +1569,6 @@ td, th {
     .statistics {
         width: 100%;
     }
-    .statistics img {
-        width: 45%;
-        height: auto;
-    }
 }
 @media screen and (max-width: 600px){
     .d-flex-A .d-block .column .column-container-3 {
@@ -1564,22 +1578,30 @@ td, th {
         font-size: 12px;
     }
 }
-@media screen and (max-width: 500px){
+@media screen and (max-width: 430px){
     .statistics img {
-        width: 75%;
-        height: auto;
+        width: 260px!important;
+        height: 152px!important;
     }
-}
-@media screen and (max-width: 400px){
-    .statistics img {
-        width: 100%;
-        height: auto;
-    }
-}
-@media screen and (max-width: 300px){
     .statistics {
         width: 100%;
-        height: 50vh;
+        height: 56vh;
+    }
+}
+@media screen and (max-width: 370px){
+    .statistics img {
+        width: 225px!important;
+        height: 130px!important;
+    }
+    .statistics {
+        width: 100%;
+        height: 53vh;
+    }
+}
+@media screen and (max-width: 320px){
+    .statistics img {
+        width: 100% !important;
+        height: auto!important;
     }
 }
     /*****************************************************calendar*********************************************************/
@@ -1639,7 +1661,6 @@ td, th {
     color: #FFFFFFFF;
     background: #00A9CFFF;
 }
-
 /****************.container-section****************/
 
 .partie-A{
@@ -1654,7 +1675,6 @@ td, th {
     align-items: center;
     justify-content: space-between;
 }
-
 .container-section-1 .container-header h1{
     font-family: 'Epilogue';
     font-size: 25px;
@@ -1662,7 +1682,6 @@ td, th {
     color: #171A1FFF;
     margin-bottom: 0px;
 }
-
 .container-section-1 .container-header button{
     font-family: 'Inter';
     font-size: 14px;
@@ -1674,20 +1693,17 @@ td, th {
     border-radius: 4px;
     height: 36px;
 }
-
 .container-section-1 .container-header .button img{
     margin-right: 10px;
     margin-right: 10px;
     width: 16px;
 }
-
 /* *******************container-body******************** */
 
 .container-body .date .dec-2022{
     display: flex;
     align-items: center;
 }
-
 .container-body .dec-2022 h2{
     font-family: 'Epilogue';
     font-size: 18px;
@@ -1695,7 +1711,6 @@ td, th {
     color: #565E6CFF;
     margin: 0px;
 }
-
 .dropdown-button{
     display: flex;
     text-align: center;
@@ -1838,6 +1853,7 @@ td, th {
     justify-content: space-between;
     display: flex;
     gap: 20px;
+    margin-left: 15px;
 }
 
 .calendar .day .day_content{
@@ -1939,6 +1955,7 @@ td, th {
     justify-content: space-between;
     padding: 20px;
     gap: 20px;
+    margin-left: 15px;
 }
 .part .partie-D{
     width: 30%;
@@ -2011,7 +2028,7 @@ td, th {
     font-size: 14px;
     line-height: 22px;
     color: #171A1FFF;
-    margin: 0px;
+    margin: 0;
 }
 .container-section-2 .event-title .d-flex{
     display: flex;
@@ -2263,7 +2280,7 @@ td, th {
         gap: 15px;
     }
     .partie-B {
-        height: 315px;
+        height: 280px;
     }
     .container-section-2 .partie-C .heure-line .heure {
         font-size: 14px;
@@ -2315,22 +2332,18 @@ td, th {
     .partie {
         padding: 20px;
     }
-
     .partie-B {
         height: 235px;
     }
-
     .container-section-1 .container-header h1 {
         font-size: 24px;
     }
-
     .container-section-1 .container-header button {
         font-size: 14px;
         line-height: 22px;
         width: 130px;
         height: 36px;
     }
-
     .container-body .dec-2022 h2 {
         font-size: 18px;
     }
@@ -2343,7 +2356,6 @@ td, th {
         width: 24px;
         height: 24px;
     }
-
     .icon-button button {
         width: 55px;
         height: 32px;
@@ -2370,7 +2382,6 @@ td, th {
         height: 25px;
         font-size: 12px;
     }
-
     .partie-B .dec--2022 img {
         width: 18px;
         height: 18px;
@@ -2379,31 +2390,26 @@ td, th {
     .calendar .day .day_content .text-day {
         font-size: 14px;
     }
-
     .calendar .btn1 {
         width: 25px;
         height: 25px;
         font-size: 12px;
     }
-
     .calendar .btn2 {
         width: 25px;
         height: 25px;
         font-size: 12px;
     }
-
     .calendar button {
         width: 25px;
         height: 25px;
         font-size: 12px;
     }
-
     .container-section-2 .partie-C .heure-line .heure {
         font-size: 12px;
         margin-right: 3px;
         width: 10%;
     }
-
     .container-section-2 .partie-C {
         width: 70%;
         margin-top: -37px;
@@ -2414,7 +2420,6 @@ td, th {
     .container-section-2 .top-0{
         margin-top: 0!important;
     }
-    
     .container-section-2 .event-title h3 {
         font-size: 14px;
     }
@@ -2432,12 +2437,10 @@ td, th {
         height: 30px;
         margin-left: -10px;
     }
-
     .container-section-2 .d-flex-img-points .points img {
         width: 24px;
         height: 24px;
     }
-
     .container-section-2 .images {
         left: 25px!important;
         width: 135px;
@@ -2496,6 +2499,12 @@ td, th {
     }
     .container-section-2 {
         margin-left: 0 !important;
+    }
+    .partie {
+        margin-left: 0!important;
+    }
+    .container-section-2 .part {
+        margin-left: 0!important;
     }
 }
 @media screen and (max-width: 700px){
@@ -2626,10 +2635,6 @@ td, th {
         width: 45%;
         height: 50px;
     }
-    /*.container-section-2 .line_verticale {*/
-    /*    height: 631px;*/
-    /*    margin-top: 75px;*/
-    /*}*/
     .container-section-2 .partie_resp {
         row-gap: 50px;
     }
@@ -2639,13 +2644,11 @@ td, th {
     .tabbar_menu .foot_page a {
         font-size: 11px;
     }
-
-
 }
-
 /***************************************************setting************************************************************/
 .texto-img-button{
     padding: 20px;
+    margin-left: 15px;
 }
 .text-images .titre{
     font-family: 'Epilogue';
@@ -2863,6 +2866,7 @@ td, th {
     }
     .lien-https {
         padding: 45px!important;
+        margin-left: 15px;
     }
     .text-images .titre {
         font-size: 30px;
@@ -3003,7 +3007,6 @@ td, th {
         width: 35px!important;
         height: 20px!important;
     }
-
 }
 @media screen and (max-width: 1116px) {
     .container-images-text-button{
@@ -3026,6 +3029,12 @@ td, th {
     .container-images-text-button_footer {
         display: block;
         height: 48vh;
+    }
+    .texto-img-button {
+        margin-left: 0;
+    }
+    .lien-https {
+        margin-left: 0;
     }
 }
 @media screen and (max-width: 768px){
