--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ header a img {
     color: #00BDD6FF;
 }
 .text-box .button2 .texte{
-    font-family: Inter;
+    font-family: "Inter";
     font-size: 14px;
     line-height: 40px;
     color: #323842FF;
@@ -420,7 +420,7 @@ header a img {
     margin-left: -0px;
 }
 .sidebar-head{
-    padding: 25px 0;
+    padding: 25px 13px;
     display: flex;
     align-items: center;
     gap: 10px;
@@ -1134,14 +1134,12 @@ td, th {
     width: 250px;
 }
 .text-stats h3{
-    margin: 0;
     font-family: 'Epilogue';
     font-size: 18px;
     line-height: 28px;
     color: #171A1FFF;
 }
 .text-stats p{
-    margin:0px;
     font-family: 'Inter';
     font-size: 14px;
     line-height: 22px;
@@ -1160,7 +1158,7 @@ td, th {
         margin-left: 15px;
     }
     .sidebar-head {
-        padding: 22px 13px;
+        padding: 22px 13px!important;
     }
     .sidebar-head .text a {
         line-height: 32px!important;
@@ -1306,14 +1304,16 @@ td, th {
     }
 }
 @media screen  and (max-width: 1117px){
-    .sidebar-head {
-        padding: 10px;
-    }
     .sidebar-images {
         display: none;
     }
     .sidebar-head .text a{
         font-size: 14px!important;
+    }
+}
+@media screen  and (max-width: 1024px){
+    .sidebar-head .text a{
+        font-size: 13px!important;
     }
 }
 @media screen  and (max-width: 992px){
