--- a/assets/css/registration.css
+++ b/assets/css/registration.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    background: #BDA3EFFF;
 }
 * {
     margin: 0;
@@ -22,65 +23,34 @@ button{
     src: url("../font-family/inter/static/Inter-SemiBold.ttf");
 }
 /* ********** */
-.themeContainer{
-    margin-left: -344px;
-    margin-top: -77px;
-    top: 0;
-}
-.theme{
-    width: 562px;
-    height: 562px;
-}
-#yellow {
-    background: #8353E24D;
-    border-radius: 50%;
-}
-.them-contain{
-    margin-top: -108px;
-}
-.them-content{
-    display: flex;
-}
-.oval {
+.logo {
     position: absolute;
     top: -50px;
 }
-.oval img {
+.logo img {
     width: 150px;
     bottom: 0;
     left: 40px;
     top: 100px;
     position: absolute;
+    z-index: 1;
 }
-/* **** */
-.body_registration{
-    background: #BDA3EFFF;
+.registration {
+    height: 100vh;
 }
-.head{
-    background: #BDA3EFFF;
-}
-.head a img {
-    margin-top: 40px;
-    margin-left: 50px;
-    width: 145px;
-    height: 45px;
-    border-radius: 4px;
-}
-.container_registration .picture .images{
+.images{
     width: 600px;
     position: absolute;
     left: 90px;
     bottom: 0;
 }
-.container_registration .picture .images img{
+.images img{
     width: 500px;
     position: relative;
     top: 4px;
+    z-index: 1;
 }
-.container_registration .picture .img{
-    display: none;
-}
-.container_registration .container {
+.registration .container {
     position: absolute;
     right: 90px;
     width: 35%;
@@ -92,13 +62,15 @@ button{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    z-index: 1;
 }
-/***.container_registration .content .button****/
-.container_registration .content {
+
+/******/
+.content {
     text-align: center;
     width: 100%;
 }
-.container_registration .content .button img {
+.content .button img {
     width: 16px;
     height: 16px;
 }
@@ -134,31 +106,27 @@ button{
     border-radius: 18px;
     border: none;
 }
-.content .button .btn1 {
+.btn1 {
     background: #FEF1F1FF;
 }
-.content .button .btn1:hover {
+.btn1:hover {
     background-color: #565E6CFF;
 }
-.content .button .btn2{
+.btn2{
     background: #F3F6FBFF;
 }
-.content .button .btn2:hover {
+.btn2:hover {
     color: #335CA6FF;
     background: #D9E2F3FF;
 }
-.content .button .btn3{
+.btn3{
     background: #F3F4F6FF;
 }
-.content .button .btn3:hover {
+.btn3:hover {
     color: #565E6CFF;
     background: #DEE1E6FF;
 }
-.content .button .btn3:hover:active {
-    color: #565E6CFF;
-    background: #CFD2DAFF;
-}
-/***.container_registration .content .text-box****/
+
 .content .text-box-input{
     display: flex;
     flex-direction: column;
@@ -166,10 +134,12 @@ button{
     margin-top: 20px;
     font-size: 18px;
 }
+
 .content .text-box-input label {
     font-size: 14px;
     font-family:"inter";
 }
+
 .content .text-box-input input {
     width: 100%;
     height: 35px;
@@ -179,12 +149,14 @@ button{
     border-width: 0;
     outline: none;
 }
+
 .content .formulaire input {
     width: 384px;
     height: 44px;
     padding-left: 16px;
     padding-right: 16px;
 }
+
 .text-box .button2 button {
     margin-top: 40px;
     height: 40px;
@@ -198,25 +170,29 @@ button{
     background: #00BDD6FF;
     cursor: pointer;
 }
+
 .text-box .button2 a {
     text-decoration: none;
     font-size: 14px;
     line-height: 22px;
     color: #00BDD6FF;
 }
+
 .text-box .button2 .texte {
     font-family: "Inter";
     font-size: 14px;
     line-height: 40px;
     color: #323842FF;
 }
+
 .text-box .button2 .texte-lien {
     font-size: 18px;
 }
+
 .text-box .button2 p {
     color: #323842FF;
 }
-/*******affiche et masquer le mot de passe******/
+
 .text-box .pass {
     display: flex;
     align-items: center;
@@ -224,32 +200,72 @@ button{
     background-color: #F3F4F6FF;
     border-radius: 22px;
 }
+
 .text-box .pass img {
     width: 28px;
     height: 28px;
     margin-right: 20px;
+    cursor: pointer;
 }
-.text-box .text-box-input .i_input {
+
+.text-box-input .i_input {
     width: 100%;
 }
 
+/*oval*/
+.ovals {
+    position: relative;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    overflow: hidden;
+}
+.ovals .oval1 {
+    position: absolute;
+    top: -77px;
+    left: -375px;
+    width: 662px;
+    height: 662px;
+    background: #8353E24D;
+    border-radius: 50%;
+}
+.ovals .oval2 {
+    position: relative;
+    top: -208px;
+    right: -1046px;
+    width: 551px;
+    height: 551px;
+    background: #8353E24D;
+    border-radius: 50%;
+}
+.ovals .oval3 {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: 784px;
+    height: 153px;
+    background: #8353E24D;
+    border-radius: 8px;
+}
+
 @media screen and (max-width: 1920px) {
-    .container_registration .picture .images img {
+    .images img {
        width: 100%;
     }
-    .content .text-box-input {
+    .text-box-input {
         margin-top: 25px;
     }
     .text-box .button2 button {
         margin-top: 45px;
         height: 40px;
     }
-    .content .text-box-input input {
+    .text-box-input input {
         height: 40px;
     }
 }
+
 @media screen and (max-width: 1700px){
-    .container_registration .picture .images img {
+    .images img {
         width: 80%;
     }
     .container .content h1 {
@@ -272,6 +288,7 @@ button{
         font-size: 14px;
     }
 }
+
 @media screen and (max-width: 1500px) {
     .content .text-box-input {
         margin-top: 15px;
@@ -283,13 +300,15 @@ button{
         margin-top: 8px;
     }
 }
+
 @media screen and (max-width: 1115px) {
-    .container_registration .picture .images img {
+   .images img {
         width: 70%;
     }
 }
+
 @media screen and (max-width: 992px) {
-    .container_registration .container {
+    .registration .container {
         position: relative;
         right: 0;
         width: 100%;
@@ -337,7 +356,7 @@ button{
     .content .text-box-input {
         margin-top: 30px;
     }
-    .container_registration .picture .images {
+    .images {
         position: relative;
         width: 100%;
         display: flex;
@@ -350,27 +369,41 @@ button{
         height: 60px;
         border-radius: 100%;
     }
-    .container_registration .picture .images img {
+    .images img {
         width: 60%;
         top: 92px;
         left: 100px;
     }
-    .oval img {
+    .logo img {
         left: 20px;
+    }
+    .ovals {
+        position: absolute;
+        width: 100%;
+    }
+    .oval2 {
+        display: none!important;
+    }
+    .oval3 {
+        display: none!important;
+    }
+    .ovals .oval1 {
+        position: relative;
     }
 }
 @media screen and (max-width: 576px) {
-    .container_registration .picture .images img {
+    .images img {
         width: 45%;
         top: 45px;
         left: 104px;
     }
-    .container_registration .container {
+    .registration .container {
         top: 0;
     }
-    .theme {
-        width: 550px;
-        height: 460px;
+    .ovals .oval1 {
+        left: -408px;
+        width: 627px;
+        height: 436px;
     }
     .content .button .btn {
         width: 36px;
@@ -384,7 +417,7 @@ button{
     .themeContainer {
         margin-left: -370px;
     }
-    .container_registration .picture .images img {
+    .images img {
         top: 28px;
         left: 90px;
     }
