agrandir de font-size de la bare de menu dans le dashboard.html

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -541,6 +541,9 @@ td, th {
         position: fixed;
         right: 20px;
     }
+    .btn-toggle .svg-inline--fa {
+        font-size: 30px;
+    }
     .toggle {
         position: relative;
         display: block;
