--- a/assets/css/footer_menu.css
+++ b/assets/css/footer_menu.css
@@ -1,4 +1,4 @@
-/******************footer******************/
+/*********footer*********/
 .tabbar_menu{
     display: none;
     background-color:#ffffff;
